Agregada generacion de exe